# linalgo

./: .buildinfo  .gitignore  .pylintrc  README.md  annotate.html  client.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: annotate.doctree  client.doctree  environment.pickle  getting_started.doctree  index.doctree  install.doctree
.github/: pypi.yml
.github/workflows/: gh-pages.yml  main.yml  pypi.yml
_sources/: install.rst.txt
doc/: client.rst  conf.py  index.rst  install.rst
linalgo/: __main__.py  config.py  linhub-prod
linalgo/annotate/: __init__.py  display.py  models.py  serializers.py  transformers.py
linalgo/annotate/test/: test_transformers.py
linalgo/hub/: bq_client.py  client.py
